@@ -10,67 +10,6 @@ import (
 	"pkg/utils"
 )
 
-func init() {
-	AvailableChecks["check_eventlog"] = CheckEntry{"check_eventlog", NewCheckEventlog}
-}
-
-type CheckEventlog struct {
-	files           []string
-	timeZoneStr     string
-	scanRange       string
-	truncateMessage int
-}
-
-func NewCheckEventlog() CheckHandler {
-	return &CheckEventlog{
-		timeZoneStr: "Local",
-		scanRange:   "-24h",
-	}
-}
-
-func (l *CheckEventlog) Build() *CheckData {
-	return &CheckData{
-		name:        "check_eventlog",
-		description: "Checks the windows eventlog entries.",
-		implemented: Windows,
-		result: &CheckResult{
-			State: CheckExitOK,
-		},
-		hasInventory: NoCallInventory,
-		args: map[string]CheckArgument{
-			"file":             {value: &l.files, description: "File to read (can be specified multiple times to check multiple files)"},
-			"log":              {value: &l.files, description: "Alias for file"},
-			"timezone":         {value: &l.timeZoneStr, description: "Sets the timezone for time metrics (default is local time)"},
-			"scan-range":       {value: &l.scanRange, description: "Sets time range to scan for message (default is 24h)"},
-			"truncate-message": {value: &l.truncateMessage, description: "Maximum length of message for each event log message text"},
-		},
-		defaultFilter:   "level in ('warning', 'error', 'critical')",
-		defaultWarning:  "level = 'warning' or problem_count > 0",
-		defaultCritical: "level in ('error', 'critical')",
-		detailSyntax:    "%(file) %(source) (%(message))",
-		okSyntax:        "%(status) - Event log seems fine",
-		topSyntax:       "%(status) - %(count) message(s) %(problem_list)",
-		emptySyntax:     "%(status) - No entries found",
-		emptyState:      0,
-		attributes: []CheckAttribute{
-			{name: "computer", description: "Which computer generated the message"},
-			{name: "file", description: "The logfile name"},
-			{name: "log", description: "Alias for file"},
-			{name: "id", description: "Eventlog id"},
-			{name: "level", description: "Severity level (lowercase)"},
-			{name: "message", description: "The message as a string"},
-			{name: "source", description: "The source system"},
-			{name: "provider", description: "Alias for source"},
-			{name: "written", description: "Time of the message being written"},
-		},
-		exampleDefault: `
-    check_eventlog
-    OK - Event log seems fine
-	`,
-		exampleArgs: `filter=provider = 'Microsoft-Windows-Security-SPP' and id = 903 and message like 'foo'`,
-	}
-}
-
 func (l *CheckEventlog) Check(_ context.Context, _ *Agent, check *CheckData, _ []Argument) (*CheckResult, error) {
 	timeZone, err := time.LoadLocation(l.timeZoneStr)
 	if err != nil {
@@ -114,7 +53,7 @@ func (l *CheckEventlog) Check(_ context.Context, _ *Agent, check *CheckData, _ [
 				"computer":  event.ComputerName,
 				"file":      event.LogFile,
 				"log":       event.LogFile,
-				"id":        fmt.Sprintf("%d", event.EventIdentifier),
+				"id":        fmt.Sprintf("%d", event.EventCode),
 				"level":     strings.ToLower(event.Type),
 				"message":   message,
 				"provider":  event.SourceName,
