@@ -3,6 +3,7 @@ This file documents the revision history for the SNClient+ agent.
 next:
          - add check_os_updates
          - check_files: fix skipping folder to early
+         - check_eventlog: fix using event id
 
 0.18     Wed Feb 14 15:36:38 CET 2024
          - fix crash on windows when parsing empty args (#88)
